--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -14,13 +14,38 @@ body {
   }
 }
 
-.btn{
-  border-radius: unset;
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  border-radius: 35px;
+  font-size: 24px;
+  line-height: 1.33;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+}
+
+.no-border-radius{
+  border-radius: 0!important;
+}
+.no-margin{
+  margin: 0;
+}
+.no-padding{
+  padding: 0;
 }
 
 a.navbar-brand img{
   width: 70px;
-  filter: contrast(200%);
+  /*filter: contrast(200%);*/
 }
 
 .header-title-post{
@@ -39,8 +64,4 @@ a.navbar-brand img{
 .card-header {
   background-color: #e8e8e8;
   border-radius: unset!important;
-}
-
-.preview-image img{
-  margin: auto;
 }
